--- a/analise_inicial.ipynb
+++ b/analise_inicial.ipynb
@@ -17291,6 +17291,82 @@
     "profile = ProfileReport(df)\n",
     "profile.to_notebook_iframe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COUGH                   0\n",
+      "MUSCLE_ACHES            0\n",
+      "TIREDNESS               0\n",
+      "SORE_THROAT             0\n",
+      "RUNNY_NOSE              0\n",
+      "STUFFY_NOSE             0\n",
+      "FEVER                   0\n",
+      "NAUSEA                  0\n",
+      "VOMITING                0\n",
+      "DIARRHEA                0\n",
+      "SHORTNESS_OF_BREATH     0\n",
+      "DIFFICULTY_BREATHING    0\n",
+      "LOSS_OF_TASTE           0\n",
+      "LOSS_OF_SMELL           0\n",
+      "ITCHY_NOSE              0\n",
+      "ITCHY_EYES              0\n",
+      "ITCHY_MOUTH             0\n",
+      "ITCHY_INNER_EAR         0\n",
+      "SNEEZING                0\n",
+      "PINK_EYE                0\n",
+      "TYPE                    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_df, temp_df = train_test_split(\n",
+    "    df,\n",
+    "    test_size=0.3, \n",
+    "    random_state=42,\n",
+    "    stratify=df['TYPE']\n",
+    ")\n",
+    "\n",
+    "validation_df, test_df = train_test_split(\n",
+    "    temp_df,\n",
+    "    test_size=0.5,\n",
+    "    random_state=42,\n",
+    "    stratify=temp_df['TYPE']\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train_df.drop(columns=['ALVO']).values\n",
+    "y_train = train_df['ALVO']\n",
+    "\n",
+    "X_val = validation_df.drop(columns=['ALVO']).values\n",
+    "y_val = validation_df['ALVO']\n",
+    "\n",
+    "X_test = test_df.drop(columns=['ALVO']).values\n",
+    "y_test = test_df['ALVO']"
+   ]
   }
  ],
  "metadata": {
